@@ -93,4 +93,7 @@
 2020-09-09 catering.backup, empty_catering.backup and full_catering.backup removed foreignkey link with table articles, 
            for possibility booking on table loss for deleted items.
 2020-09-09 backups table loss extended with field item_price
+2020-09-10 catering.py request loss and book loss articles added fields item_price and description for uncoupling foreignkey articles
+2020-09-10 catering.backup and empty_catering.backup and full_catering.backup database changed due to adding fields item_price and description
+
 
